# vit-nvfp4

./: .gitignore  PHASE0_RESULT.md  REAL_VIDEO_PERF.md  SAGEATTENTION_SM120_EVAL.md  SP2_EXPAND_RESULT.md  SP2_RESULT.md  SP3_RESULT.md  SP4_EVAL_RESULT.md  SP5_RESULT.md  SPA_ATTENTION_RESULT.md  pyproject.toml
bench/: bench_gemm.py
docs/: DEVELOPMENT_LOG.md  README.md
docs/design/plans/: 2026-06-23-sp1-nvfp4-w4a4-gemm.md
docs/design/specs/: 2026-06-23-nvfp4-w4a4-gemm-design.md  2026-06-23-sp2-ptq-frontend-design.md
docs/research/: 2026-06-23-calibration-error-reduction.md  2026-06-23-nvfp4-vit-research-findings.md
docs/results/attention/: SPA_WIRING_RESULT.md
docs/results/perf/: FUSEDMLP_NVFP4_RESULT.md
docs/results/ptq/: QWEN_W4A4_VERDICT.md  SP2_EXPAND_RESULT.md
docs/superpowers/plans/: 2026-06-23-sp1-nvfp4-w4a4-gemm.md
docs/superpowers/specs/: 2026-06-23-nvfp4-w4a4-gemm-design.md
examples/: attention_precision.py  dinov2_ptq.py  eval_knn_dinov2.py  eval_knn_vit.py  eval_techniques.py  quant_vit_smoke.py
src/vit_nvfp4/eval/: knn.py
src/vit_nvfp4/nvfp4/: __init__.py  attention.py  check.py  format.py  fp8.py  gemm.py  pack.py  quant.py  triton_cast.py
src/vit_nvfp4/nvfp4/backends/: reference.py  torch_scaled_mm.py
src/vit_nvfp4/ptq/: __init__.py  bias_correction.py  calibrate.py  convert.py  convert_gptq.py  diagnostics.py  fused_mlp.py  gptq.py  models.py  policy.py  qattention.py  qlinear.py  regcache.py  sa3_attention.py
tests/: conftest.py  test_attention.py  test_backend_torch.py  test_bias_correction.py  test_calibrate.py  test_convert.py  test_dinov2_ptq.py  test_env.py  test_format.py  test_four_over_six.py  test_fused_mlp.py  test_gemm_correctness.py  test_gptq_mse.py  test_knn.py  test_models.py  test_pack.py  test_qattention.py  test_qlinear.py  test_quant.py  test_regcache.py
