[project]
name = "vit-nvfp4"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "pytest",
    "transformers>=5.12.1",
    "datasets>=5.0.0",
    "pillow>=12.2.0",
]

[project.optional-dependencies]
# Fast inference path. The fused NVFP4 MLP (GELU-fused W4A4) needs only torch + triton
# (triton ships with the cu130 torch wheel). Only the FP4 *attention* speedup needs
# SageAttention3 (``sageattn3``), which has no PyPI wheel and must be built from source for
# sm_120 — see FUSEDMLP_NVFP4_RESULT.md. ``enable_sa3_attention`` raises a clear error if absent.
accel = ["sageattn3"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vit_nvfp4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["requires_sm120: needs a compute-capability 12.0 GPU"]
